test/should-not-compile/test-class-readonly-props.ki

use ns;

fn main {
	let x = ns:APublicClass{};
	x.readonly_prop = 5;
}
